Fix the CSS so that the titles won't overlap with the background graphics
git-svn-id: http://svn.codehaus.org/geoserver/trunk@15014 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 8c9470a2ab592036346ed4622d2c02bf98034ea3 [formerly db8a53162e25ad83c5a5acb66f4919a42cc6834d]
Former-commit-id: 4ace3f5883276874a0ccbe604b57b686109dce62

--- a/src/web/core/src/main/java/org/geoserver/web/css/geoserver.css
+++ b/src/web/core/src/main/java/org/geoserver/web/css/geoserver.css
@@ -715,6 +715,7 @@ background-position: 0 -2px;
 .page-header {
 background: #fff url(../img/page-header-bg.png) repeat-x;
 margin-bottom: 1em;
+padding-top: 18px;
 }
 
 * html .page-header { /* IE6 */
